# Sodh

./: .dockerignore  .env.example  .gitignore  .replit  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Comprehensive Development Plan for the DAPPR Platform.docx  DEPLOYMENT.md  LICENSE  MANIFEST.in  Procfile  README.md  __main__.py  app.py  deploy.sh  docker-compose.yml  entry_point.py  main.py  package.json  packages.txt  pyproject.toml  requirements.txt  run.py  run.sh  setup.bat  setup.cfg  setup.py  setup.sh  setup_dev.py  setup_github.sh  setup_streamlit.sh  streamlit_app.py  test_app.py  tsconfig.json  update_init.py  update_utils_init.py
.streamlit/: config.toml  secrets.example.toml  secrets.toml  secrets.toml.example
assets/: Whitepaper  styles.css
attached_assets/: Complete Process for Converting a Solana Smart Contract into a Website and App.docx  DAPPR White Paper Updated for Solana.docx  DAPPR code with usdt.txt  Pasted--DAPPR-Revolutionizing-Academia-Industry-Collaboration-through-Blockchain-Why-We-Started-Bui-1748152753163.txt  Pasted--NAVIGATION-Dashboard-Transactions-Account-Smart-Contract-Whitepaper--1748152544797.txt  Pasted--NAVIGATION-Dashboard-Transactions-Account-Smart-Contract-Whitepaper--1748153568793.txt  Pasted--SODH-Solana-Blockchain-Explorer-Powered-by-DAPPR-Decentralized-Autonomous-Platf-1748152926330.txt  Pasted--SODH-Solana-Blockchain-Explorer-Powered-by-DAPPR-Decentralized-Autonomous-Platf-1748153240175.txt  Pasted--SODH-Solana-Blockchain-Explorer-Powered-by-DAPPR-Decentralized-Autonomous-Platf-1748153257280.txt  Pasted--SODH-Solana-Blockchain-Explorer-Powered-by-DAPPR-Decentralized-Autonomous-Platf-1748154029994.txt  Pasted--SODH-Solana-Blockchain-Explorer-Powered-by-DAPPR-Decentralized-Autonomous-Platf-1748154041358.txt  Pasted--SODH-Solana-Blockchain-Explorer-Powered-by-DAPPR-Decentralized-Autonomous-Platf-1748154059332.txt  Pasted--SODH-Solana-Blockchain-Explorer-Powered-by-DAPPR-Decentralized-Autonomous-Platf-1748154352579.txt  Smart Contract.txt  dappr_implementation_guide.md  solana-mobile-app-implementation-guide.md  test suite for smart contract.txt  ैोतताू.docx
components/: __init__.py  account.py  account_fixed.py  dashboard.py  dashboard_fixed.py  header.py  smart_contract.py  transaction_submitter.py  transaction_submitter_new.py  transaction_submitter_simplified.py  transactions.py  transactions_fixed.py  transactions_simple.py  tutorial.py  tutorial_fixed.py  tutorial_simple.py  whitepaper.py  whitepaper_fixed.py
docs/: migration_to_web.md
main/: __init__.py
mobile-app/: .eslintrc.js  .gitignore  App.tsx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Sodh.code-workspace  app.json  build-android.sh  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.base.json
mobile-app/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
mobile-app/src/components/: ErrorBoundary.tsx
mobile-app/src/components/__tests__/: AccountInfo.test.tsx  ErrorBoundary.test.tsx  LoadingSpinner.test.tsx  NetworkSelector.test.tsx  NetworkStatus.test.tsx  SearchBar.test.tsx  ThemeToggle.test.tsx  TransactionCard.test.tsx  TransactionList.test.tsx  WalletInfo.test.tsx
mobile-app/src/config/: env.ts
mobile-app/src/context/: UniversalWalletProvider.tsx  WalletContext.tsx
mobile-app/src/context/__tests__/: WalletContext.test.tsx
mobile-app/src/navigation/: AppNavigation.tsx  AppNavigator.tsx
mobile-app/src/navigation/__tests__/: AppNavigation.test.tsx
mobile-app/src/screens/: AccountScreen.tsx  ConnectWalletScreen.tsx  DashboardScreen.tsx  ExplorerScreen.tsx  HomeScreen.tsx  SmartContractScreen.tsx  TransactionDetailsScreen.tsx  WalletScreen.tsx
mobile-app/src/screens/__tests__/: ConnectWalletScreen.test.tsx  ExplorerScreen.test.tsx  HomeScreen.test.tsx  SettingsScreen.test.tsx  TransactionDetailScreen.test.tsx  WalletScreen.test.tsx
mobile-app/src/services/: solana-service.ts
mobile-app/src/services/__tests__/: solana-service.test.ts
mobile-app/src/types/: components.d.ts  index.d.ts
mobile-app/src/utils/: api.ts
programs/dappr-collab/: Cargo.toml
programs/dappr-collab/src/: lib.rs
sodh/: __init__.py  app.py
sodh/components/: account.py  account_fixed.py  header.py  smart_contract.py  transactions_fixed.py  transactions_simple.py  whitepaper.py
sodh/utils/: __init__.py  database.py  solana_client_fixed.py  solana_client_robust.py  wallet_validator.py
src/contracts/: Cargo.toml  client.py
src/contracts/src/: lib.rs
src/main/: streamlit_app.py
tests/: dappr-collab.ts
utils/: database.py  solana_client.py  solana_client_fixed.py  solana_client_new.py  solana_client_robust.py  wallet_validator.py
web-migration/: package.json
web-migration/src/: App.css  App.js
web-migration/src/components/: Header.js
web-migration/src/components/smart-contract/: ContractExplorer.js  ContractHeader.js  MilestoneSection.js  ProjectForm.js  ProjectList.js
web-migration/src/pages/: SmartContract.js
