[package]
name = "dappr-collab"
version = "0.1.0"
description = "DAPPR Collaboration Agreement Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"], optional = true }
anchor-spl = { version = "0.29.0", optional = true }

[dev-dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

[workspace]
members = [
    "programs/*",
]
resolver = "2"
