[develop]
recurse = yes

[easy_install]
recurse = yes

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

[build_sphinx]
source_dir = docs/source
build_dir = docs/_build
all_files = 1

[build_ext]
compiler_directives = {'language_level': 3}

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,.venv,venv,build,dist
per-file-ignores =
    # Allow star imports in __init__.py files
    __init__.py: F403,F401

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[metadata]
description-file = README.md
license_file = LICENSE
long_description_content_type = text/markdown

[options]
package_dir =
    = .
packages = find:
where = .
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    streamlit>=1.45.1
    solana>=0.36.6
    solders>=0.26.0
    base58>=2.1.1
    python-dotenv>=1.1.0
    requests>=2.32.3
    aiohttp>=3.12.0
    pandas>=2.2.3
    numpy>=2.2.6
    python-dateutil>=2.9.0
    pytz>=2025.2
    plotly>=6.1.1
    sqlalchemy>=2.0.41

[options.packages.find]
include = sodh*
exclude = 
    tests*
    docs*
    examples*
    .github
    .git
    .vscode
    __pycache__
    *.pyc
    *.pyo
    *.pyd
    .DS_Store
    .env
    .venv
    venv
    env
    build
    dist
    *.egg-info

[options.package_data]
* = *.json, *.toml, *.md, *.txt, *.html, *.css, *.js

[options.entry_points]
console_scripts =
    sodh = run:main
