[package]
name = "dappr_collab"
version = "0.1.0"
description = "DAPPR Collaboration Agreement Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

[dev-dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
