[package]
name = "dappr-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for DAPPR platform on Solana"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-bpf = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
